--- a/package.json
+++ b/package.json
@@ -2,25 +2,29 @@
   "name": "react.dev",
   "version": "0.0.0",
   "devDependencies": {
+    "@babel/core": "^7.24.8",
     "@babel/plugin-transform-class-properties": "^7.24.7",
     "@babel/plugin-transform-json-strings": "^7.24.7",
     "@babel/plugin-transform-nullish-coalescing-operator": "^7.24.7",
     "@babel/plugin-transform-numeric-separator": "^7.24.7",
     "@babel/plugin-transform-optional-chaining": "^7.24.8",
     "@babel/plugin-transform-private-methods": "^7.24.7",
+    "@babel/preset-react": "^7.24.7",
     "@jridgewell/sourcemap-codec": "^1.5.0",
     "@rollup/plugin-terser": "^0.4.4",
+    "babel-loader": "^9.1.3",
     "react-scripts": "^5.0.1"
   },
-  "main": "/src/index.js",
+  "type": "module",
+  "main": "/src/App.js",
   "scripts": {
-     "predeploy": "npm run audit:production && npm run audit:development",
-     "audit:production": "npm audit --production",
-     "audit:development": "npm audit --omit=dev",   
-     "start": "react-scripts start",
-     "build": "react-scripts build",
-     "test": "react-scripts test --env=jsdom",
-     "eject": "react-scripts eject"
+    "predeploy": "npm run audit:production && npm run audit:development",
+    "audit:production": "npm audit --production",
+    "audit:development": "npm audit --omit=dev",
+    "start": "node index.js",
+    "build": "react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.24.8",
@@ -36,8 +40,8 @@
     "react-dom": "^18.0.0",
     "rimraf": "^4.0.0"
   },
-  "resolutions" :{
-    "nth-check":"2.0.1"
+  "resolutions": {
+    "nth-check": "2.0.1"
   },
   "browserslist": {
     "production": [
