--- a/package.json
+++ b/package.json
@@ -9,19 +9,17 @@
     "@babel/plugin-transform-numeric-separator": "^7.24.7",
     "@babel/plugin-transform-optional-chaining": "^7.24.8",
     "@babel/plugin-transform-private-methods": "^7.24.7",
-    "@babel/preset-react": "^7.24.7",
     "@jridgewell/sourcemap-codec": "^1.5.0",
     "@rollup/plugin-terser": "^0.4.4",
     "babel-loader": "^9.1.3",
     "react-scripts": "^5.0.1"
   },
-  "type": "module",
-  "main": "/src/App.js",
+  "main": "/src/index.js",
   "scripts": {
     "predeploy": "npm run audit:production && npm run audit:development",
     "audit:production": "npm audit --production",
     "audit:development": "npm audit --omit=dev",
-    "start": "node index.js",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
