--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
      "predeploy": "npm run audit:production && npm run audit:development",
      "audit:production": "npm audit --production",
      "audit:development": "npm audit --omit=dev",   
-     "start": "react-scripts start",
-     "build": "react-scripts build",
+     "start": "./app-info.sh && react-scripts start",
+     "build": "./app-info.sh && react-scripts build",
      "test": "react-scripts test --env=jsdom",
      "eject": "react-scripts eject"
   },
