--- a/package.json
+++ b/package.json
@@ -14,13 +14,13 @@
   },
   "main": "/src/index.js",
   "scripts": {
-     "predeploy": "npm run audit:production && npm run audit:development",
-     "audit:production": "npm audit --production",
-     "audit:development": "npm audit --omit=dev",   
-     "start": "./app-info.sh && react-scripts start",
-     "build": "./app-info.sh && react-scripts build",
-     "test": "react-scripts test --env=jsdom",
-     "eject": "react-scripts eject"
+    "predeploy": "npm run audit:production && npm run audit:development",
+    "audit:production": "npm audit --production",
+    "audit:development": "npm audit --omit=dev",
+    "start": "./app-info.sh && react-scripts start",
+    "build": "./app-info.sh && react-scripts build",
+    "test": "react-scripts test --env=jsdom",
+    "eject": "react-scripts eject"
   },
   "dependencies": {
     "@babel/eslint-parser": "^7.24.8",
@@ -34,10 +34,11 @@
     "joi": "^17.13.3",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "rimraf": "^4.0.0"
+    "rimraf": "^4.0.0",
+    "serve": "^14.2.3"
   },
-  "resolutions" :{
-    "nth-check":"2.0.1"
+  "resolutions": {
+    "nth-check": "2.0.1"
   },
   "browserslist": {
     "production": [
